k8s/app-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-nginx
  namespace: fastapi
spec:
  selector:
    matchLabels:
      app: fastapi
  replicas: 1 
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi
        image: tajmin/backend-app:v2.0
        ports:
        - containerPort: 8000
