k8s/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: psql
  namespace: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psql
  template:
    metadata:
      labels:
        app: psql
    spec:
      # terminationGracePeriodSeconds: 10
      containers:
        - name: psql
          image: postgres:15.6
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5432
          volumeMounts:
            - name: psql
              mountPath: /var/lib/postgresql/data 
  volumeClaimTemplates:
    - metadata:
        name: psql
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
