k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: fastapi
spec:
  type: ClusterIP
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
