k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: fastapi
spec:
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
